# firedust-slack

./: .pre-commit-config.yaml  Dockerfile  README.md  buildspec.yml  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: build.sh
src/slackapp/: __main__.py  start.py
src/slackapp/_utils/: assistant.py  decorators.py  logging.py  slack.py
src/slackapp/utils/: assistant.py  decorators.py  errors.py  logging.py  slack.py
