[tool.poetry]
name = "firedust-slack"
version = "0.0.1"
description = "A Slack application template for Firedust"
authors = ["ion <firedvst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
firedust = "^0.0.33"
pydantic = "^2.5.3"
uvicorn = "^0.27.0.post1"
slack-bolt = "^1.18.1"
click = "^8.1.7"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.12.1"
ruff = "^0.3.7"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority="supplemental"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
